--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,3 +5,32 @@ services:
     build: .
     ports:
       - "3020:3030"
+    environment:
+      DATABASE_HOST: postgres
+      DATABASE_NAME: postgres
+      DATABASE_USERNAME: postgres
+      DATABASE_PORT: 5432
+      DATABASE_PASSWORD: password
+      JWT_SECRET:
+      ACCESS_TOKEN_EXPIRATION:
+      REFRESH_TOKEN_EXPIRATION:
+      EMAIL_SENDER:
+      EMAIL_SENDER_PASSWORD:
+      EMAIL_SENDER_HOST:
+      EMAIL_SENDER_PORT:
+      EMAIL_SENDER_SECURE:
+      DEBBUG: true
+
+  postgres:
+    image: postgres
+    container_name: "checklist-database"
+    environment:
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: password
+    ports:
+      - 5432:5432
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
+
+volumes:
+  postgres_data:
