--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,6 +22,7 @@ services:
       DATABASE_USERNAME: postgres
       DATABASE_PORT: 5432
       DATABASE_PASSWORD: password
+      DEBBUG: true
       JWT_SECRET:
       ACCESS_TOKEN_EXPIRATION:
       REFRESH_TOKEN_EXPIRATION:
@@ -30,7 +31,8 @@ services:
       EMAIL_SENDER_HOST:
       EMAIL_SENDER_PORT:
       EMAIL_SENDER_SECURE:
-      DEBBUG: true
+      COOKIES_DOMAIN:
+      COOKIES_PATH:
 
 volumes:
   postgres_data:
